# the_poc

./: .dockerignore  .env  Cargo.toml  README.md  Trunk.toml
.docker/: docker-compose.yml  server.Dockerfile
.github/workflows/: deploy.yml
apps/server/: Cargo.toml
apps/server/src/: main.rs
apps/web/: Cargo.toml  index.html
apps/web/src/: main.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs  main.rs
crates/entity/: Cargo.toml
crates/entity/src/: lib.rs  post.rs  prelude.rs
crates/migration/: Cargo.toml
crates/migration/src/: main.rs
crates/star_wars_sdk/: Cargo.toml  build.rs
crates/star_wars_sdk/src/: lib.rs
