[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
sea-orm = { version = "0.12.3", features = ["runtime-async-std-native-tls", "sqlx-postgres", "macros"] }
futures = "0.3.28"
sea-orm-migration = { version = "0.12.3"}
serde = { version = "1.0.188", features = ["derive"] }
entity = { path = "../entity" }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
