[package]
name = "star_wars_sdk"
version = "0.1.0"
edition = "2021"

[lib]
name = "star_wars_sdk"
path = "./src/lib.rs"

[build-dependencies]
cynic-codegen = { version = "3" }

[dev-dependencies]
insta = "1.32.0"

[dependencies]
cynic = { version = "3.2.2", features = ["http-reqwest", "http-reqwest-blocking"] }
reqwest = { version = "0.11.20" }
cargo-insta = { version = "1.32.0" }
serde = { version = "1.0.188" }
